# Lenin-bot

./: actividad.txt  actividad2.txt  actividaddm.txt  actividaddm2.txt  main.py  notificaciones  participantes.txt  pyproject.toml  saved commands.txt  sorteo.txt  sorteo1.txt
ayuda/: ayuda.txt  ayuda2.txt  canales.txt  comandos.txt  siguiente.txt  ultima.txt
manifiesto/: comando.txt  msg1.txt  msg2.txt  msg3.txt  msg4.txt  msg5.txt
random/: citas.txt  datos.txt  kpop.txt
roles/: notificaciones  notificaciones-id.txt  notificaciones-nombre.txt  roles1.txt  roles3.txt  secgen-id.txt
votaciones/: bot.txt  hora.txt  origen.txt
votaciones/anteriores/: origen.txt
